# ChangeLog for media-video/mplayer-sh
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer-sh/ChangeLog,v 1.8 2013/06/23 18:05:38 hd_brummy Exp $

  23 Jun 2013; Joerg Bornkessel <hd_brummy@gentoo.org>
  mplayer-sh-0.8.6-r2.ebuild, mplayer-sh-0.8.7.ebuild:
  fixed unclear license as-is, see wrt bug 446222

  27 Nov 2007; Matthias Schwarzott <zzam@gentoo.org>
  mplayer-sh-0.8.6-r2.ebuild, mplayer-sh-0.8.7.ebuild:
  Fixed quoting.

  08 Jun 2007; Matthias Schwarzott <zzam@gentoo.org>
  mplayer-sh-0.8.7.ebuild:
  Marked stable on x86.

*mplayer-sh-0.8.7 (06 May 2007)

  06 May 2007; Joerg Bornkessel <hd_brummy@gentoo.org>
  +files/mplayer-sh-0.8.7-parameter-aid.diff, +mplayer-sh-0.8.7.ebuild:
  version bump

  01 Aug 2006; Matthias Schwarzott <zzam@gentoo.org> metadata.xml:
  Assigned to VDR-Project.

  17 Apr 2006; Matthias Schwarzott <zzam@gentoo.org>
  -mplayer-sh-0.8.6-r1.ebuild, mplayer-sh-0.8.6-r2.ebuild:
  Removed older version, marked stable on x86

*mplayer-sh-0.8.6-r2 (26 Mar 2006)

  26 Mar 2006; Matthias Schwarzott <zzam@gentoo.org>
  +files/mplayer-sh-0.8.6-parameter-aid.diff, +mplayer-sh-0.8.6-r2.ebuild:
  Added patch for selection of audio-language

*mplayer-sh-0.8.6-r1 (08 Jan 2006)

  08 Jan 2006; Joerg Bornkessel <hd_brummy@gentoo.org> +metadata.xml,
  +mplayer-sh-0.8.6-r1.ebuild:
  initial import, older Versions on gentoo.de cvs
