@@ -5,15 +5,15 @@ AUX mplayer-sh-0.8.6-parameter-aid.diff 3541 SHA256 b63f1c0220b2a2fce8ad5a81767a
 AUX mplayer-sh-0.8.7-parameter-aid.diff 3570 SHA256 5d0079cb73baee2108ee1cb587988a09e6108b92361587b045a718215914858f SHA512 9783f779a09143faa89ef3de5d87ec415dd797af53d4b1da6b56ed28021a414768b4393e0fd8812c74805c17970eb24cbee3ebc12ee741e036a2f4276e449e5c WHIRLPOOL 42a6b1d9b5d78d7fd70b24cf33f94a0c3fe576d570bdbfa79f2050fa74a52387178e145719a6c55ffc97c5086bdf24e0e6882c950ad6183850c8c1701c986ed1
 DIST mplayer.sh-0.8.6.tar.gz 7568 SHA256 3d98b55f7b173296ac40d14b967f525459f415b340322de53cd8105cca4851ef
 DIST mplayer.sh-0.8.7.tar.gz 7851 SHA256 271f1105efcc6292117d826255f873da4ef70cf517f523d65a36036c74c60dcf
-EBUILD mplayer-sh-0.8.6-r2.ebuild 1171 SHA256 4ca18ceaecd183f2ad121a994d1227e1b4a7b00c5f8b97ac7a9e6acde4d954be SHA512 17662c69719a3e8295fbb56fc0f5c9cf598a67e4a02b52fbe0904e138d0ea94812e141ba42accb4dda1838b0716cc10d38ea573cac438eaa137813478244b1a8 WHIRLPOOL 2fe2ceb15c1b134f48020195f74f217227633a8f83c29af5489930520ada7e555196434a0cdeac16994093da2d67ddb1f656c38b373c5f60e8315a83f942ea3b
-EBUILD mplayer-sh-0.8.7.ebuild 1192 SHA256 028d18548402e3d7227312ffa4792ab7d1a1fbcc55667ee7f6306df703628d3c SHA512 533f4f6071e9048b08c6798674e9ce02526eed6ae33db015069292aa920a10b14ce7066f948f9b91f0a9cc8ddc7e32b646a24dd6d40c9291c8d9074a1b29f071 WHIRLPOOL 16f6cf019904bf06604c86ce486f60cc1c1718ff3a08fd678241c9c1ff6da37d40c216df41e459d85ff1057ee82dac6d9b9de1f251dcc0d2a95cf8a860bc26aa
-MISC ChangeLog 1441 SHA256 49b6ad03f26eebdb91157a9005d30b69c52fb2ca76be7509909d349952976d14 SHA512 6138cb7e8888a2de8a22031016973882cf8e4cf622e0a83689359f6b9a64457969b232e555f7a6416126fd1f6ae1567d9065f6d85fe33eef2ee0cf1062ecfaaf WHIRLPOOL f5a8b38ab59d0486c81e93075024f998999752c542e9e8688dc687b8fa174a10926a6078a10b1852ad1d38819c39ff1c146dda90d0e11bb19d7df914287412f0
+EBUILD mplayer-sh-0.8.6-r2.ebuild 1146 SHA256 2a0caa21b96572ed93d283631b1a5002108d93582b2c283a866a27d606d94def SHA512 2274758f62aee0bd0079261029a9b7c597fa61b81d179fa23960501695be8431fd1dc6d7c9ed0e39b748b22e7a60b3daa2d730cb8f0293cfbd1423ba087b04d5 WHIRLPOOL cb60154e70b042c7a24612e6bc0880060af1eaccf0e71ae7095f3d34b244ab744a78db695383a2e316f8161c30f59b2176de6c9abc705647a83124f24630d88c
+EBUILD mplayer-sh-0.8.7.ebuild 1167 SHA256 f94fbde73c923962e8b3ed2d401c3978ea8918e32e2287aefd178b95ab312afd SHA512 14e72dab608d5af0997154e589d7a0bb17c77aac6d12d71c9a8f00f260140538c8b5bab34531841b8eddaf76eb2ec8ead8fc566408634fd2b608609d0bea2c34 WHIRLPOOL fbcb18cdf1fb616c15a88a055eb0e142a3dee6450fae963f57844115975850ce05f832a7aa83ec66cf98b29f41eef7eb6c876c149dabb2fb4eccb4ff443cd344
+MISC ChangeLog 1584 SHA256 5bab88015bf65ec4010835a5594337edc72ab236d65c82f1b2ef1b4f2abf1864 SHA512 7f9f23f56243138da98e209242137f7a15e0a8cf42cedd8afbc19fddc9d719c57005f666d5b76a05354906c61108fc1b9e13ba0baf097f7f9d079e37194fbfdf WHIRLPOOL 71f0b789e016dcb2813ce92dbfbbdf6cacf79cac2589afd124a5964e64250410f08d55d6e252f27b57b5908f4795b41680ae1cb6cb617bf186f061189b46f118
 MISC metadata.xml 360 SHA256 acf529769233dd99fa0f41183f5f54a8c7da70b6f61c3bb64bcd866a4536ed1e SHA512 6a271f02194aa0f8be4f43d01c648bf80092833a506acef400139f633cf0756ea280e6fa271d74ac53b5db67303dd52c90b7871f8237adeb0b31ca8367dc612a WHIRLPOOL 3ae721b708fc034806d73d43753e55596c58e8d4bb94e7ec290a331109b20914bafac6570127ae147f832fe9f4450b734ff8374623a7702fc372c7ac9ac68e45
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 Comment: signed/commited by hd_brummy@gentoo.org
 
-iD8DBQFRxzj4dn07HTTCgIoRCBREAJ4ym4SgBiwa3PPQ+oeIOZ7/DK7eoQCgrrJL
-g+lQxndjujJG4LxaYd1GCdY=
-=U/+z
+iD8DBQFRxznddn07HTTCgIoRCGuuAKCnx11p4ywKS2pYhEaDGjn4DomxhQCgk5wS
+V2QgCwGMCeVnj0DkqIscCYI=
+=llLR
 -----END PGP SIGNATURE-----
