@@ -1,6 +1,10 @@
 # ChangeLog for media-video/mplayer-sh
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer-sh/ChangeLog,v 1.8 2013/06/23 18:05:38 hd_brummy Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer-sh/ChangeLog,v 1.9 2013/06/23 18:09:30 hd_brummy Exp $
+
+  23 Jun 2013; Joerg Bornkessel <hd_brummy@gentoo.org>
+  mplayer-sh-0.8.6-r2.ebuild, mplayer-sh-0.8.7.ebuild:
+  minor syntax fixes for EAPI=5
 
   23 Jun 2013; Joerg Bornkessel <hd_brummy@gentoo.org>
   mplayer-sh-0.8.6-r2.ebuild, mplayer-sh-0.8.7.ebuild:
